// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateMerchStructuredData > matches golden snapshot for product + offer 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Product",
  "brand": {
    "@type": "Brand",
    "name": "Test Artist",
  },
  "description": "Soft cotton tee from the 2026 tour.",
  "image": [
    "https://example.com/tee.jpg",
  ],
  "name": "Tour Tee",
  "offers": {
    "@type": "Offer",
    "availability": "https://schema.org/InStock",
    "price": "32.00",
    "priceCurrency": "USD",
    "url": "https://jov.ie/testartist/merch/card-1",
  },
}
`;

exports[`generateMusicStructuredData > matches golden snapshot for release pages 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@id": "https://jov.ie/testartist/midnight-drive#release",
      "@type": [
        "MusicAlbum",
        "MusicRelease",
      ],
      "albumReleaseType": "https://schema.org/AlbumRelease",
      "byArtist": {
        "@id": "https://jov.ie/testartist#musicgroup",
        "@type": [
          "MusicGroup",
          "Person",
        ],
        "name": "Test Artist",
        "url": "https://jov.ie/testartist",
      },
      "datePublished": "2024-03-01",
      "image": {
        "@type": "ImageObject",
        "caption": "Midnight Drive album cover art by Test Artist",
        "encodingFormat": "image/jpeg",
        "height": 640,
        "name": "Midnight Drive artwork",
        "representativeOfPage": true,
        "url": "https://example.com/art.jpg",
        "width": 640,
      },
      "isAccessibleForFree": true,
      "name": "Midnight Drive",
      "numTracks": 10,
      "potentialAction": [
        {
          "@type": "ListenAction",
          "name": "Listen on Spotify",
          "target": {
            "@type": "EntryPoint",
            "actionPlatform": "https://schema.org/DesktopWebPlatform",
            "urlTemplate": "https://open.spotify.com/album/1",
          },
        },
      ],
      "sameAs": [
        "https://open.spotify.com/album/1",
      ],
      "track": {
        "@type": "ItemList",
        "itemListElement": [
          {
            "@type": "ListItem",
            "item": {
              "@type": "MusicRecording",
              "byArtist": {
                "@id": "https://jov.ie/testartist#musicgroup",
              },
              "duration": "PT3M30S",
              "name": "Track One",
              "url": "https://jov.ie/testartist/midnight-drive/track-one",
            },
            "position": 1,
          },
        ],
        "numberOfItems": 1,
      },
      "url": "https://jov.ie/testartist/midnight-drive",
    },
    {
      "@type": "BreadcrumbList",
      "itemListElement": [
        {
          "@type": "ListItem",
          "item": "https://jov.ie",
          "name": "Home",
          "position": 1,
        },
        {
          "@type": "ListItem",
          "item": "https://jov.ie/testartist",
          "name": "Test Artist",
          "position": 2,
        },
        {
          "@type": "ListItem",
          "item": "https://jov.ie/testartist/midnight-drive",
          "name": "Midnight Drive",
          "position": 3,
        },
      ],
    },
  ],
}
`;

exports[`generateMusicStructuredData > matches golden snapshot for track pages 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@id": "https://jov.ie/testartist/midnight-drive/track-one#track",
      "@type": "MusicRecording",
      "byArtist": {
        "@id": "https://jov.ie/testartist#musicgroup",
        "@type": [
          "MusicGroup",
          "Person",
        ],
        "name": "Test Artist",
        "url": "https://jov.ie/testartist",
      },
      "datePublished": "2024-03-01",
      "duration": "PT3M30S",
      "image": {
        "@type": "ImageObject",
        "caption": "Track One track art by Test Artist",
        "encodingFormat": "image/jpeg",
        "height": 640,
        "name": "Track One artwork",
        "representativeOfPage": true,
        "url": "https://example.com/art.jpg",
        "width": 640,
      },
      "inAlbum": {
        "@id": "https://jov.ie/testartist/midnight-drive#release",
        "@type": "MusicAlbum",
        "name": "Midnight Drive",
        "url": "https://jov.ie/testartist/midnight-drive",
      },
      "isAccessibleForFree": true,
      "isrcCode": "USRC17607839",
      "name": "Track One",
      "position": 1,
      "potentialAction": [
        {
          "@type": "ListenAction",
          "name": "Listen on Spotify",
          "target": {
            "@type": "EntryPoint",
            "actionPlatform": "https://schema.org/DesktopWebPlatform",
            "urlTemplate": "https://open.spotify.com/track/1",
          },
        },
      ],
      "sameAs": [
        "https://open.spotify.com/track/1",
      ],
      "url": "https://jov.ie/testartist/midnight-drive/track-one",
    },
    {
      "@type": "BreadcrumbList",
      "itemListElement": [
        {
          "@type": "ListItem",
          "item": "https://jov.ie",
          "name": "Home",
          "position": 1,
        },
        {
          "@type": "ListItem",
          "item": "https://jov.ie/testartist",
          "name": "Test Artist",
          "position": 2,
        },
        {
          "@type": "ListItem",
          "item": "https://jov.ie/testartist/midnight-drive/track-one",
          "name": "Track One",
          "position": 3,
        },
      ],
    },
  ],
}
`;

exports[`generateProfileStructuredData > matches golden snapshot for profile entity graph 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@id": "https://jov.ie/testartist#profilepage",
      "@type": "ProfilePage",
      "dateCreated": "2024-01-01T00:00:00Z",
      "dateModified": "2024-01-15T00:00:00Z",
      "mainEntity": {
        "@id": "https://jov.ie/testartist#musicgroup",
      },
      "name": "Test Artist | Jovie",
      "url": "https://jov.ie/testartist",
    },
    {
      "@id": "https://jov.ie/testartist#musicgroup",
      "@type": [
        "MusicGroup",
        "Person",
      ],
      "additionalProperty": {
        "@type": "PropertyValue",
        "name": "verified",
        "value": true,
      },
      "description": "An amazing artist making great music.",
      "foundingDate": "2018",
      "genre": [
        "rock",
        "indie",
      ],
      "image": {
        "@type": "ImageObject",
        "name": "Test Artist profile photo",
        "url": "https://example.com/avatar.jpg",
      },
      "location": {
        "@type": "Place",
        "name": "Los Angeles, CA",
      },
      "name": "Test Artist",
      "potentialAction": [
        {
          "@type": "ListenAction",
          "target": {
            "@type": "EntryPoint",
            "actionPlatform": "https://schema.org/DesktopWebPlatform",
            "urlTemplate": "https://open.spotify.com/artist/123",
          },
        },
        {
          "@type": "ListenAction",
          "target": {
            "@type": "EntryPoint",
            "actionPlatform": "https://schema.org/DesktopWebPlatform",
            "urlTemplate": "https://music.apple.com/artist/123",
          },
        },
        {
          "@type": "ListenAction",
          "target": {
            "@type": "EntryPoint",
            "actionPlatform": "https://schema.org/DesktopWebPlatform",
            "urlTemplate": "https://youtube.com/channel/123",
          },
        },
      ],
      "sameAs": [
        "https://open.spotify.com/artist/123",
        "https://instagram.com/testartist",
        "https://music.apple.com/artist/123",
        "https://youtube.com/channel/123",
      ],
      "url": "https://jov.ie/testartist",
    },
    {
      "@type": "BreadcrumbList",
      "itemListElement": [
        {
          "@type": "ListItem",
          "item": "https://jov.ie",
          "name": "Home",
          "position": 1,
        },
        {
          "@type": "ListItem",
          "item": "https://jov.ie/testartist",
          "name": "Test Artist",
          "position": 2,
        },
      ],
    },
    {
      "@id": "https://jov.ie/testartist#event-td-1",
      "@type": "MusicEvent",
      "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
      "eventStatus": "https://schema.org/EventScheduled",
      "location": {
        "@type": "Place",
        "address": {
          "@type": "PostalAddress",
          "addressCountry": "US",
          "addressLocality": "Los Angeles",
          "addressRegion": "CA",
        },
        "geo": {
          "@type": "GeoCoordinates",
          "latitude": 33.95,
          "longitude": -118.34,
        },
        "name": "The Forum",
      },
      "name": "Summer Tour Night",
      "offers": {
        "@type": "Offer",
        "availability": "https://schema.org/InStock",
        "url": "https://tickets.example.com/td-1",
      },
      "performer": {
        "@id": "https://jov.ie/testartist#musicgroup",
      },
      "startDate": "2026-07-14T20:00:00-07:00",
    },
  ],
}
`;
